--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 </head>
 <body>
     <h1>Build school作業天地</h1>
-    <a href="Hw001/hw1 切版.html">作業一</a>
-    <a href="/curriculum/curriculum.html">作業二-課表</a>
+    <a href="./HW1/HW1 切版.html">作業一</a>
+    <a href="./Curriculum/curriculum.html">作業二-課表</a>
     <a href="./Toyota Hw/Toyota.html">作業三-TOYOTA切版</a>
-    <a href="/RWD_HW/RWDHW.html">作業四-RWDHW</a>
-    <a href="/JasonHsulala0806.github.io/1A2B/1A2B.html"></a>
+    <a href="./RWD_HW/RWDHW.html">作業四-RWDHW</a>
+    <a href="./1A2B/1A2B.html">1A2B</a>
     <a href=""></a>
+    <a href="./Guess number/guess_number.html">終極密碼</a>
 </body>
 </html>
