--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
             color: aqua;
             margin:auto;                      
         }
+        a{
+            text-decoration: none;
+        }
     </style>
 
 
 </head>
 <body>
     <h1>Build school作業天地</h1>
-    <a href="./HW1/HW1 切版.html">作業一</a>
-    <a href="./Curriculum/curriculum.html">作業二-課表</a>
-    <a href="./Toyota Hw/Toyota.html">作業三-TOYOTA切版</a>
-    <a href="./RWD_HW/RWDHW.html">作業四-RWDHW</a>
-    <a href="./1A2B/1A2B.html">1A2B</a>
-    <a href=""></a>
-    <a href="./Guess number/guess_number.html">終極密碼</a>
+    <a href="/JasonHsulala.github.io/HW1/HW1 切版.html">作業一</a>
+    <a href="/JasonHsulala.github.io/Curriculum/curriculum.html">作業二-課表</a>
+    <a href="/JasonHsulala.github.io/Toyota Hw/Toyota.html">作業三-TOYOTA切版</a>
+    <a href="/JasonHsulala.github.io/RWD_HW/RWDHW.html">作業四-RWDHW</a>
+    <a href="/JasonHsulala.github.io/Guess number/guess_number.html">終極密碼</a>
 </body>
 </html>
