--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <h1>Build school作業天地</h1>
-    <a href="/JasonHsulala.github.io/HW1/HW1 切版.html">作業一</a>
+    <a href="./HW1/HW1 切版.html">作業一</a>
     <a href="/JasonHsulala.github.io/Curriculum/curriculum.html">作業二-課表</a>
     <a href="/JasonHsulala.github.io/Toyota Hw/Toyota.html">作業三-TOYOTA切版</a>
     <a href="/JasonHsulala.github.io/RWD_HW/RWDHW.html">作業四-RWDHW</a>
