--- a/Calendar/Calendar.html
+++ b/Calendar/Calendar.html
@@ -7,7 +7,7 @@
     <title>2023 - Calendar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-</head>
+
 
 <body>
     <h1 class="year-month">0000年 - 00月</h1>
@@ -30,6 +30,45 @@
     <button onclick="previousMonth()" class="btn btn-primary">往上月</button>
     <button onclick="nextMonth()" class="btn btn-primary">往下月</button>
 
+    <!-- 新增行程Modal -->
+    <div id="add-modal" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">新增</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <input id="add-date" type="text">
+                    <input id="add-value" type="text">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">新增</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 編輯行程Modal -->
+    <div id="edit-modal" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">編輯</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <input id="edit-date" type="text">
+                    <input id="edit-value" type="text">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger">刪除</button>
+                    <button type="button" class="btn btn-primary">修改</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
@@ -38,13 +77,10 @@
         //宣告
         const today = new Date() //今天
         let year = today.getFullYear() //年
-        let month = today.getMonth() //月份 1月是0 12月是11 13代表前一年的1月
+        let month = today.getMonth() //月份 1月是0
         //DOM
         const yearMonthText = document.querySelector('.year-month')
         const dateArea = document.querySelector('tbody')
-
-        const addModel = document.querySelector('#add-modal')
-        const editModal = 
 
         //function
         function renderDate() {
@@ -57,7 +93,7 @@
             //這個月有幾天?
             let dayOfMonth = new Date(year, month + 1, 0).getDate()
 
-            let rows = Math.ceil((dayOfMonth + firstDay) / 7)
+            let rows = Math.ceil((dayOfMonth + firstDay) / 7)//無條件進位
             let day = 1
 
             for (let row = 0; row < rows; row++) {
