--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Build school作業</title>
     <style>
-        h1{
+        h1 {
             font: size 40px;
             color: aqua;
-            margin:auto;                      
+            margin: auto;
+            text-align: center;
         }
-        a{
+
+        a {
             text-decoration: none;
+            text-align: center;
+            display: flex;
+            align-items: center;
+        }
+
+        body {
+            font-family: Roboto, 'Segoe UI', Arial, 'Microsoft Jhenghei', sans-serif;
+            font: size 40px;;
         }
     </style>
 
 
 </head>
+
 <body>
     <h1>Build school作業天地</h1>
     <a href="./HW1/HW1 切版.html">作業一</a>
-    <a href="/JasonHsulala.github.io/Curriculum/curriculum.html">作業二-課表</a>
-    <a href="/JasonHsulala.github.io/Toyota Hw/Toyota.html">作業三-TOYOTA切版</a>
-    <a href="/JasonHsulala.github.io/RWD_HW/RWDHW.html">作業四-RWDHW</a>
-    <a href="/JasonHsulala.github.io/Guess number/guess_number.html">終極密碼</a>
+    <a href="./Curriculum/curriculum.html">作業二-課表</a>
+    <a href="./Toyota Hw/Toyota.html">作業三-TOYOTA切版</a>
+    <a href="./RWD_HW/RWDHW.html">作業四-RWDHW</a>
+    <a href="./Guess number/guess_number.html">終極密碼</a>
 </body>
+
 </html>
