--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Build school作業</title>
     <style>
+        body {
+            font-family: Roboto, 'Segoe UI', Arial, 'Microsoft Jhenghei', sans-serif;
+            background-image:url("./image.jpg")
+        }
         h1 {
-            font: size 40px;
-            color: aqua;
+            font-size: 60px;
+            color: orange;
             margin: auto;
             text-align: center;
         }
 
-        a {
+        a{
+            color: aliceblue;
             text-decoration: none;
             text-align: center;
             display: flex;
-            align-items: center;
-        }
-
-        body {
-            font-family: Roboto, 'Segoe UI', Arial, 'Microsoft Jhenghei', sans-serif;
-            font: size 40px;;
-        }
+            align-content: center;
+        }       
     </style>
 
 
@@ -37,6 +37,7 @@
     <a href="./Toyota Hw/Toyota.html">作業三-TOYOTA切版</a>
     <a href="./RWD_HW/RWDHW.html">作業四-RWDHW</a>
     <a href="./Guess number/guess_number.html">終極密碼</a>
+    <a href="./LOL_HW/LoL_CardStatic.html">英雄聯盟資料處理</a>
 </body>
 
 </html>
